// Vitest Snapshot v1

exports[`DaySelector > renders snapshot 1`] = `
<div
  class="flex justify-between items-center"
>
  <h2
    class="grow text-center block text-xl text-neutral-800"
  >
    Sonntag 
    <time
      class="block text-lg font-light text-neutral-700"
      datetime="2019-12-01"
    >
      1.12.2019
    </time>
  </h2>
  <button
    aria-keyshortcuts="ArrowLeft"
    aria-label="Zu vorherigem Tag wechseln"
    class="text-primary-500 hover:text-primary-600 origin-center hover:scale-110 disabled:text-primary-400 disabled:opacity-25 disabled:cursor-not-allowed active:text-primary-800 order-first"
    disabled="false"
    title="Zu vorherigem Tag wechseln"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-angle-left fa-w-8 w-16 h-16"
      data-icon="angle-left"
      data-prefix="fas"
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m31.7 239 136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    aria-keyshortcuts="ArrowRight"
    aria-label="Zu nächstem Tag wechseln"
    class="text-primary-500 hover:text-primary-600 origin-center hover:scale-110 disabled:text-primary-400 disabled:opacity-25 disabled:cursor-not-allowed active:text-primary-800"
    disabled="false"
    title="Zu nächstem Tag wechseln"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-angle-right fa-w-8 w-16 h-16"
      data-icon="angle-right"
      data-prefix="fas"
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m224.3 273-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`DaySelector renders snapshot 1`] = `
<div
  class="flex justify-between items-center"
>
  <h2
    class="grow text-center block text-xl text-neutral-800"
  >
    Sonntag 
    <time
      class="block text-lg font-light text-neutral-700"
      datetime="2019-12-01"
    >
      1.12.2019
    </time>
  </h2>
  <button
    aria-keyshortcuts="ArrowLeft"
    aria-label="Zu vorherigem Tag wechseln"
    class="text-primary-500 hover:text-primary-600 origin-center hover:scale-110 disabled:text-primary-400 disabled:opacity-25 disabled:cursor-not-allowed active:text-primary-800 order-first"
    title="Zu vorherigem Tag wechseln"
  >
    <!---->
  </button>
  <button
    aria-keyshortcuts="ArrowRight"
    aria-label="Zu nächstem Tag wechseln"
    class="text-primary-500 hover:text-primary-600 origin-center hover:scale-110 disabled:text-primary-400 disabled:opacity-25 disabled:cursor-not-allowed active:text-primary-800"
    title="Zu nächstem Tag wechseln"
  >
    <!---->
  </button>
</div>
`;
